# manufacturing-layout-optimization-framework

./: .gitignore  .pylintrc  LICENSE  README.md  datetime_string.py  graph_v2.html  graphs.py  main.py  main_helper.py  methodology.md  model.py  model.yaml  mypy.ini  pyproject.toml  refactor_graph.py  requirements.txt
output/: graph.html  graph_v2.html  last_graph_v2.html  last_tree.html  last_tree_filtered.html  tree.html  tree_filtered.html
output/history/: 2024_01_26_11_10_54_tree.html  2024_02_13_14_05_53_graph.html  2024_03_04_11_52_13_tree.html  2024_03_04_12_20_04_tree.html  2024_03_04_12_22_32_tree.html  2024_03_04_12_38_44_tree.html  2024_03_04_13_45_37_manufacturing_graph.html
src/: main.py  model.py  model.yaml  output_cleaning.ipynb  outputs.py  process_graphs.py  process_graphs_tools.py  rearengement_algorithm.ipynb  rearrangement _algorithm.ipynb  rearrangement_algorithm.ipynb  server.py  solver_graph.py  support.py  visgraph_demo.ipynb
src/graph/: __init__.py  problem.py  process.py
src/model/: __init__.py  plant.py  plant_graph.py  plant_rearrangement.py  test.py  tools.py
src/static/: app.css  app.js  editor.html  monaco.css  monaco.js  sample_model.yaml  text_editor.html
